# django_admin_command_center

./: .gitignore  README.md
backend/: pyproject.toml
backend/admin_command_center/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  tasks.py
backend/admin_command_center/api/: serializers.py  urls.py  views.py
backend/admin_command_center/application/: base_service.py  command_services.py
backend/admin_command_center/domain/: value_objects.py
backend/admin_command_center/infrastructure/: discovery.py  executor.py
backend/admin_command_center/migrations/: 0001_initial.py
backend/admin_command_center/static/admin_command_center/: index.html
backend/admin_command_center/static/admin_command_center/assets/: index-BGA-mI8k.css  index-CjlvpF30.js
backend/config/: asgi.py  settings.py  urls.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.css  types.ts
frontend/src/components/: CommandDetail.tsx  CommandList.tsx  ExecutionLogs.tsx  Layout.tsx
